5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1747_3087.log
== TEST (2019-05-16 10:27:55) 
-- CODE:
x = int(input("num: "))

i = 0

while(x != 0):
	if(num % 2 == 0):
		mp = num/num * i
		i = i + 1
	elif(num % 3 == 0):
		mi = num/ num*i
		i = i + 1
		
		

print(mp)
print(mi)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(num % 2 == 0):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:28:14) 
-- CODE:
x = int(input("num: "))

i = 0

while(x != 0):
	if(num % 2 == 0):
		mp = num/num * i
		i = i + 1
	elif(num % 3 == 0):
		mi = num/ num*i
		i = i + 1
		
		

print(mp)
print(mi)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(num % 2 == 0):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:28:24) 
-- CODE:
num = int(input("num: "))

i = 0

while(x != 0):
	if(num % 2 == 0):
		mp = num/num * i
		i = i + 1
	elif(num % 3 == 0):
		mi = num/ num*i
		i = i + 1
		
		

print(mp)
print(mi)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(x != 0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:28:33) 
-- CODE:
num = int(input("num: "))

i = 0

while(num != 0):
	if(num % 2 == 0):
		mp = num/num * i
		i = i + 1
	elif(num % 3 == 0):
		mi = num/ num*i
		i = i + 1
		
		

print(mp)
print(mi)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(x != 0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:29:05) 
-- CODE:
num = int(input("num: "))

i = 0

while(num != 0):
	if(num % 2 == 0):
		mp = num/num * i
		i = i + 1
	elif(num % 3 == 0):
		mi = num/ num*i
		i = i + 1
	

num = int(input("num: "))
		
		

print(mp)
print(mi)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(x != 0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:29:09) 
-- CODE:
num = int(input("num: "))

i = 0

while(num != 0):
	if(num % 2 == 0):
		mp = num/num * i
		i = i + 1
	elif(num % 3 == 0):
		mi = num/ num*i
		i = i + 1
	

num = int(input("num: "))
		
		

print(mp)
print(mi)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(x != 0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:29:13) 
-- CODE:
num = int(input("num: "))

i = 0

while(num != 0):
	if(num % 2 == 0):
		mp = num/num * i
		i = i + 1
	elif(num % 3 == 0):
		mi = num/ num*i
		i = i + 1
	

	num = int(input("num: "))
		
		

print(mp)
print(mi)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(mi)
NameError: name 'mi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:29:31) 
-- CODE:
num = int(input("num: "))

i = 0

while(num != 0):
	if(num % 2 == 0):
		mp = num/num * i
		i = i + 1
	elif(num % 3 == 0):
		mi = num/ num*i
		i = i + 1
	

	num = int(input("num: "))
		
		

	print(mp)
	print(mi)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(mi)
NameError: name 'mi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:29:47) 
-- CODE:
num = int(input("num: "))

i = 0

while(num != 0):
	if(num % 2 == 0):
		mp = num/num * i
		i = i + 1
	elif(num % 3 == 0):
		mi = num/ num*i
		i = i + 1
	

	num = int(input("num: "))
		
		

	print(mp)
	print(mi)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(mi)
NameError: name 'mi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:30:13) 
-- CODE:
num = int(input("num: "))

i = 0

while(num != 0):
	if(num % 2 == 0):
		mp = num/num * i
		i = i + 1
	num = int(input("num: "))
	elif(num % 3 == 0):
		mi = num/ num*i
		i = i + 1
	

	num = int(input("num: "))
		
		

	print(mp)
	print(mi)
		
-- ERROR:
File "XXXX", line 10
    elif(num % 3 == 0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:30:34) 
-- CODE:
num = int(input("num: "))

i = 0

while(num != 0):
	if(num % 2 == 0):
		mp = num/num * i
		i = i + 1
	num = int(input("num: "))
	else:
		mi = num/ num*i
		i = i + 1
	

	num = int(input("num: "))
		
		

	print(mp)
	print(mi)
		
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:34:52) 
-- CODE:
num = int(input("num: "))

i = 1

while(num!=0):
	if(num%2==0):
		mp = num / num * i
		i = i + 1
		print(mp)
	elif(num%3==0):
		mi = num/num*i
		i = i + 1
		print(mi)
		

		
		
		
		
		
		
num = int(input("T: "))
		
-- OUTPUT:
1.0
2.0
3.0
4.0
5.0
6.0
7.0
8.0
9.0
10.0
11.0
12.0
13.0
14.0
15.0
16.0
17.0
18.0
19.0
20.0
21.0
22.0
23.0
24.0
25.0
26.0
27.0
28.0
29.0
30.0
31.0
32.0
33.0
34.0
35.0
36.0
37.0
38.0
39.0
40.0
41.0
42.0
43.0
44.0
45.0
46.0
47.0
48.0
49.0
50.0
51.0
52.0
53.0
54.0
55.0
56.0
57.0
58.0
59.0
60.0
61.0
62.0
63.0
64.0
65.0
66.0
67.0
68.0
69.0
70.0
71.0
72.0
73.0
74.0
75.0
76.0
77.0
78.0
79.0
80.0
81.0
82.0
83.0
84.0
85.0
86.0
87.0
88.0
89.0
90.0
91.0
92.0
93.0
94.0
95.0
96.0
97.0
98.0
99.0
100.0
101.0
102.0
103.0
104.0
105.0
106.0
107.0
108.0
109.0
110.0
111.0
112.0
113.0
114.0
115.0
116.0
117.0
118.0
119.0
120.0
121.0
122.0
123.0
124.0
125.0
126.0
127.0
128.0
129.0
130.0
131.0
132.0
133.0
134.0
135.0
136.0
137.0
138.0
139.0
140.0
141.0
142.0
143.0
144.0
145.0
146.0
147.0
148.0
149.0
150.0
151.0
152.0
153.0
154.0
155.0
156.0
157.0
158.0
159.0
160.0
161.0
162.0
163.0
164.0
165.0
166.0
167.0
168.0
169.0
170.0
171.0
172.0
173.0
174.0
175.0
176.0
177.0
178.0
179.0
180.0
181.0
182.0
183.0
184.0
185.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:35:20) 
-- CODE:
num = int(input("num: "))

i = 1

while(num!=0):
	if(num%2==0):
		mp = num / num * i
		i = i + 1
		print(mp)
	elif(num%3==0):
		mi = num/num*i
		i = i + 1
		print(mi)
		

		
		
		
		
		
		
	num = int(input("T: "))
		
-- OUTPUT:
1.0
2.0
3.0
4.0
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:35:27) 
-- CODE:
num = int(input("num: "))

i = 1

while(num!=0):
	if(num%2==0):
		mp = num / num * i
		i = i + 1
		print(mp)
	elif(num%3==0):
		mi = num/num*i
		i = i + 1
		print(mi)
		

		
		
		
		
		
		
	num = int(input("T: "))
		
-- EXECUTION TIME:
0.148138
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
-6.0
0.0
---- user output:
1.0
2.0
3.0
4.0
5.0
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
5.33
8.0
---- user output:
1.0
2.0
3.0
4.0
-- TEST CASE 3:
---- input:
1
1
1
3
2
2
2
4
0
---- correct output:
2.5
1.5
---- user output:
1.0
2.0
3.0
4.0
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:39:26) 
-- CODE:
num = int(input("num: "))

i = 0

while(num != 0):
	if(num%2==0):
		mp = num * i/ i 
		i = i + 1
		num = int(input("n: "))
		print(mp)
	else:
		mi = num * i/ i
		i = i + 1
		num = int(input("n: "))
		print(mi)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    mp = num * i/ i 
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:39:40) 
-- CODE:
num = int(input("num: "))

i = 1

while(num != 0):
	if(num%2==0):
		mp = num * i/ i 
		i = i + 1
		num = int(input("n: "))
		print(mp)
	else:
		mi = num * i/ i
		i = i + 1
		num = int(input("n: "))
		print(mi)
		
		
-- OUTPUT:
-10.0
-8.0
-6.0
-4.0
-2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:39:49) 
-- CODE:
num = int(input("num: "))

i = 1

while(num != 0):
	if(num%2==0):
		mp = num * i/ i 
		i = i + 1
		num = int(input("n: "))
		print(mp)
	else:
		mi = num * i/ i
		i = i + 1
		num = int(input("n: "))
		print(mi)
		
		
-- EXECUTION TIME:
0.139515
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
-6.0
0.0
---- user output:
-10.0
-8.0
-6.0
-4.0
-2.0
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
5.33
8.0
---- user output:
11.0
11.0
9.0
1.0
10.0
2.0
4.0
-- TEST CASE 3:
---- input:
1
1
1
3
2
2
2
4
0
---- correct output:
2.5
1.5
---- user output:
1.0
1.0
1.0
3.0
2.0
2.0
2.0
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:48:04) 
-- CODE:
num = int(input("num: "))

i = 0
mp = 0
mi = 0

while(num != 0):
	i = i + 1
	if(num%2==0):
		mp = mp + (num * i / i)
	else:
		mi = mi + (num * i / i)
		
		
		
	print(mp)
	print(mi)
	
	
	
	num = int(input("num: "))
		
-- OUTPUT:
-10.0
0
-18.0
0
-24.0
0
-28.0
0
-30.0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:48:42) 
-- CODE:
num = int(input("num: "))

i = 0
mp = 0
mi = 0

while(i>num):
	i = i + 1
	if(num%2==0):
		mp = mp + (num * i / i)
	else:
		mi = mi + (num * i / i)
		
		
		
	print(mp)
	print(mi)
	
	
	
	num = int(input("num: "))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:48:51) 
-- CODE:
num = int(input("num: "))

i = 0
mp = 0
mi = 0

while(i<num):
	i = i + 1
	if(num%2==0):
		mp = mp + (num * i / i)
	else:
		mi = mi + (num * i / i)
		
		
		
	print(mp)
	print(mi)
	
	
	
	num = int(input("num: "))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:48:58) 
-- CODE:
num = int(input("num: "))

i = 0
mp = 0
mi = 0

while(i<num):
	i = i + 1
	if(num%2==0):
		mp = mp + (num * i / i)
	else:
		mi = mi + (num * i / i)
		
		
		
	print(mp)
	print(mi)
	
	
	
num = int(input("num: "))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:49:04) 
-- CODE:
num = int(input("num: "))

i = 0
mp = 0
mi = 0

while(i<num):
	i = i + 1
	if(num%2==0):
		mp = mp + (num * i / i)
	else:
		mi = mi + (num * i / i)
		
		
		
	print(mp)
	print(mi)
	
	
	
num = int(input("num: "))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:49:04) 
-- CODE:
num = int(input("num: "))

i = 0
mp = 0
mi = 0

while(i<num):
	i = i + 1
	if(num%2==0):
		mp = mp + (num * i / i)
	else:
		mi = mi + (num * i / i)
		
		
		
	print(mp)
	print(mi)
	
	
	
num = int(input("num: "))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:49:40) 
-- CODE:
num = int(input("num: "))

i = 0
mp = 0
mi = 0

while(i>mp and i>mi):
	i = i + 1
	if(num%2==0):
		mp = mp + (num * i / i)
	else:
		mi = mi + (num * i / i)
		
		
		
	print(mp)
	print(mi)
	
	
	
num = int(input("num: "))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:50:01) 
-- CODE:
num = int(input("num: "))

i = 0
mp = 0
mi = 0

while(i<mp and i<mi):
	i = i + 1
	if(num%2==0):
		mp = mp + (num * i / i)
	else:
		mi = mi + (num * i / i)
		
		
		
	print(mp)
	print(mi)
	
	
	
num = int(input("num: "))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:50:19) 
-- CODE:
num = int(input("num: "))

i = 0
mp = 0
mi = 0

while(i>0):
	i = i + 1
	if(num%2==0):
		mp = mp + (num * i / i)
	else:
		mi = mi + (num * i / i)
		
		
		
	print(mp)
	print(mi)
	
	
	
num = int(input("num: "))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:50:31) 
-- CODE:
num = int(input("num: "))

i = 0
mp = 0
mi = 0

while(i != 0 ):
	i = i + 1
	if(num%2==0):
		mp = mp + (num * i / i)
	else:
		mi = mi + (num * i / i)
		
		
		
	print(mp)
	print(mi)
	
	
	
num = int(input("num: "))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:50:38) 
-- CODE:
num = int(input("num: "))

i = 0
mp = 0
mi = 0

while(num != 0 ):
	i = i + 1
	if(num%2==0):
		mp = mp + (num * i / i)
	else:
		mi = mi + (num * i / i)
		
		
		
	print(mp)
	print(mi)
	
	
	
num = int(input("num: "))
		
-- OUTPUT:
-10.0
0
-20.0
0
-30.0
0
-40.0
0
-50.0
0
-60.0
0
-70.0
0
-80.0
0
-90.0
0
-100.0
0
-110.0
0
-120.0
0
-130.0
0
-140.0
0
-150.0
0
-160.0
0
-170.0
0
-180.0
0
-190.0
0
-200.0
0
-210.0
0
-220.0
0
-230.0
0
-240.0
0
-250.0
0
-260.0
0
-270.0
0
-280.0
0
-290.0
0
-300.0
0
-310.0
0
-320.0
0
-330.0
0
-340.0
0
-350.0
0
-360.0
0
-370.0
0
-380.0
0
-390.0
0
-400.0
0
-410.0
0
-420.0
0
-430.0
0
-440.0
0
-450.0
0
-460.0
0
-470.0
0
-480.0
0
-490.0
0
-500.0
0
-510.0
0
-520.0
0
-530.0
0
-540.0
0
-550.0
0
-560.0
0
-570.0
0
-580.0
0
-590.0
0
-600.0
0
-610.0
0
-620.0
0
-630.0
0
-640.0
0
-650.0
0
-660.0
0
-670.0
0
-680.0
0
-690.0
0
-700.0
0
-710.0
0
-720.0
0
-730.0
0
-740.0
0
-750.0
0
-760.0
0
-770.0
0
-780.0
0
-790.0
0
-800.0
0
-810.0
0
-820.0
0
-830.0
0
-840.0
0
-850.0
0
-860.0
0
-870.0
0
-880.0
0
-890.0
0
-900.0
0
-910.0
0
-920.0
0
-930.0
0
-940.0
0
-950.0
0
-960.0
0
-970.0
0
-980.0
0
-990.0
0
-1000.0
0
-1010.0
0
-1020.0
0
-1030.0
0
-1040.0
0
-1050.0
0
-1060.0
0
-1070.0
0
-1080.0
0
-1090.0
0
-1100.0
0
-1110.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:51:49) 
-- CODE:
num = int(input("num: "))

i = 0
mp = 0
mi = 0

while(num > 0 ):
	i = i + 1
	if(num%2==0):
		mp = mp + (num * i / i)
	else:
		mi = mi + (num * i / i)
		
		
		
	print(mp)
	print(mi)
	
	
	
num = int(input("num: "))
		
-- OUTPUT:
-10.0
0
-20.0
0
-30.0
0
-40.0
0
-50.0
0
-60.0
0
-70.0
0
-80.0
0
-90.0
0
-100.0
0
-110.0
0
-120.0
0
-130.0
0
-140.0
0
-150.0
0
-160.0
0
-170.0
0
-180.0
0
-190.0
0
-200.0
0
-210.0
0
-220.0
0
-230.0
0
-240.0
0
-250.0
0
-260.0
0
-270.0
0
-280.0
0
-290.0
0
-300.0
0
-310.0
0
-320.0
0
-330.0
0
-340.0
0
-350.0
0
-360.0
0
-370.0
0
-380.0
0
-390.0
0
-400.0
0
-410.0
0
-420.0
0
-430.0
0
-440.0
0
-450.0
0
-460.0
0
-470.0
0
-480.0
0
-490.0
0
-500.0
0
-510.0
0
-520.0
0
-530.0
0
-540.0
0
-550.0
0
-560.0
0
-570.0
0
-580.0
0
-590.0
0
-600.0
0
-610.0
0
-620.0
0
-630.0
0
-640.0
0
-650.0
0
-660.0
0
-670.0
0
-680.0
0
-690.0
0
-700.0
0
-710.0
0
-720.0
0
-730.0
0
-740.0
0
-750.0
0
-760.0
0
-770.0
0
-780.0
0
-790.0
0
-800.0
0
-810.0
0
-820.0
0
-830.0
0
-840.0
0
-850.0
0
-860.0
0
-870.0
0
-880.0
0
-890.0
0
-900.0
0
-910.0
0
-920.0
0
-930.0
0
-940.0
0
-950.0
0
-960.0
0
-970.0
0
-980.0
0
-990.0
0
-1000.0
0
-1010.0
0
-1020.0
0
-1030.0
0
-1040.0
0
-1050.0
0
-1060.0
0
-1070.0
0
-1080.0
0
-1090.0
0
-1100.0
0
-1110.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
